# thumbnailer

./: .bzrignore  CMakeLists.txt  CTestCustom.cmake.in  HACKING  snapcraft.yaml  thumb.qml  tsan-suppress  valgrind-suppress
data/: CMakeLists.txt  com.canonical.Unity.Thumbnailer.gschema.xml  thumbnailer.in
debian/: changelog  (+21 more)
doc/libthumbnailer/: CMakeLists.txt  Doxyfile.in  tutorial.dox
doc/libthumbnailer-qt/: CMakeLists.txt  Doxyfile.in  index.html  tutorial.dox
doc/libthumbnailer-qt/examples/: CMakeLists.txt  qt_example.cpp  qt_example_test.cpp
include/libthumbnailer/: CMakeLists.txt  thumbnailer.h
man/: CMakeLists.txt  thumbnailer-admin.1  thumbnailer-service.1  thumbnailer-settings.5  vs-thumb.1
plugins/Ubuntu/Thumbnailer.0.1/: CMakeLists.txt  albumartgenerator.cpp  albumartgenerator.h  artgeneratorcommon.cpp  artgeneratorcommon.h  artistartgenerator.cpp  artistartgenerator.h  plugin.cpp  plugin.h  qmldir  thumbnailerimageresponse.cpp  thumbnailerimageresponse.h  thumbnailgenerator.cpp  thumbnailgenerator.h
src/: CMakeLists.txt  artdownloader.cpp  artgeneratorcommon.cpp  audioimageextractor.cpp  backoff_adjuster.cpp  cachehelper.cpp  check_access.cpp  env_vars.cpp  file_io.cpp  file_lock.cpp  image.cpp  imageextractor.cpp  imagescaler.cpp  lastfmdownloader.cpp  lastfmdownloader.cpp.THIS  libthumbnailer.map  local_album_art.cpp  make_directories.cpp  mediaartcache.cpp  mimetype.cpp  qartdownloader.cpp  qurldownloader.cpp  ratelimiter.cpp  safe_strerror.cpp  settings.cpp  soupdownloader.cpp  syncdownloader.cpp  thumbnailcache.cpp  thumbnailer.cpp  thumbnailer.in  trace.cpp  ubuntuserverdownloader.cpp  urldownloader.cpp  version.cpp  videoscreenshotter.cpp  vs-thumb.cpp
src/core/: CMakeLists.txt  persistent_cache_stats.cpp  persistent_string_cache.cpp
src/core/internal/: CMakeLists.txt  persistent_string_cache_impl.cpp
src/libthumbnailer/: CMakeLists.txt  libthumbnailer.cpp  libthumbnailer.map  libthumbnailer.map-g  thumbnailer.cpp
src/libthumbnailer-qt/: CMakeLists.txt  libthumbnailer-qt.cpp  libthumbnailer-qt.map  libthumbnailer-qt.pc.in
src/service/: CMakeLists.txt  admininterface.cpp  admininterface.h  admininterface.xml  albumarthandler.cpp  albumarthandler.h  artistarthandler.cpp  artistarthandler.h  bus.xml  client_config.cpp  com.canonical.Thumbnailer.service.in  credentialscache.cpp  credentialscache.h  dbus-interface.xml  dbusinterface.cpp  dbusinterface.h  dbusinterface.xml  handler.cpp  handler.h  inactivityhandler.cpp  inactivityhandler.h  main.cpp  ratelimiter.cpp  ratelimiter.h  stats.cpp  stats.h  thumbnailhandler.cpp  thumbnailhandler.h
src/thumbnailer-admin/: CMakeLists.txt  action.h  clear.cpp  clear.h  dbus_connection.cpp  dbus_connection.h  downloaderstest.cpp  get_local_thumbnail.cpp  get_local_thumbnail.h  get_remote_thumbnail.cpp  get_remote_thumbnail.h  parse_size.cpp  parse_size.h  show_stats.cpp  show_stats.h  shutdown.cpp  shutdown.h  thumbnailer-admin.cpp  util.cpp  util.h
src/vs-thumb/: CMakeLists.txt  test-seq.cpp  thumbnailextractor.cpp  thumbnailextractor.h  vs-thumb.cpp
tests/: CMakeLists.txt  TestUrlDownloader.cpp  TestUrlDownloader.h  basic.cpp  download.cpp  file_io.cpp  gmock_nowarn.h  gobj_ptr.cpp  gtest_nowarn.h  image.cpp  mediaartcachetest.cpp  safe_strerror_test.cpp  test_dbus.cpp  test_qml.cpp  test_settings.cpp  test_vsthumb.cpp  testsetup.h.in  thumbnailer_test.cpp  unique_gobj.cpp
tests/art_extractor/: CMakeLists.txt  art_extractor_test.cpp
tests/backoff_adjuster/: CMakeLists.txt  backoff_adjuster_test.cpp
tests/check_access/: CMakeLists.txt  check_access_test.cpp
tests/copyright/: check_copyright.sh
tests/core/: CMakeLists.txt
tests/dbus/: CMakeLists.txt  dbus_test.cpp
tests/download/: CMakeLists.txt  download_test.cpp
tests/file_io/: CMakeLists.txt  file_io_test.cpp
tests/file_lock/: CMakeLists.txt  file_lock_test.cpp  hold_lock.cpp
tests/gobj_ptr/: CMakeLists.txt  gobj_ptr_test.cpp
tests/headers/: CMakeLists.txt  compile_headers.py
tests/image/: CMakeLists.txt  image_test.cpp
tests/image-provider/: CMakeLists.txt  image-provider_test.cpp
tests/image-providers/: CMakeLists.txt  provider_test.cpp
tests/libthumbnailer/: CMakeLists.txt  libthumbnailer_test.cpp
tests/libthumbnailer-qt/: CMakeLists.txt  libthumbnailer-qt_test.cpp
tests/media/: Forbidden Planet.m4v  testsong.aiff  testsong.flac  testsong.m4a  testsong.mp2  testsong.oga  testsong.opus  testsong.spx  testsong_ogg  testsong_other.flac
tests/qml/: CMakeLists.txt  Fixture.qml  disabled_tst_albumart.qml  qml_test.cpp  run_test.sh  tst_albumart.qml  tst_embedded_albumart.qml  tst_image_provider.qml  tst_photo.qml  tst_thumbnailer.qml
tests/recovery/: CMakeLists.txt  MockCache.cpp  MockCache.h  recovery_test.cpp
tests/safe_strerror/: CMakeLists.txt  safe_strerror_test.cpp
tests/server/: server.py
tests/settings/: CMakeLists.txt  settings_test.cpp
tests/slow-vs-thumb/: CMakeLists.txt  slow-vs-thumb_test.cpp
tests/stress/: CMakeLists.txt  stress_test.cpp
tests/thumbnailer/: CMakeLists.txt  thumbnailer_test.cpp
tests/thumbnailer-admin/: CMakeLists.txt  thumbnailer-admin_test.cpp
tests/tools/: CMakeLists.txt  thumbnailer-admin_test.cpp
tests/utils/: CMakeLists.txt  artserver.cpp  artserver.h  dbusserver.cpp  dbusserver.h  env_var_guard.h  supports_decoder.cpp  supports_decoder.h  testutils.cpp  testutils.h
tests/version/: CMakeLists.txt  version_test.cpp
tests/vs-thumb/: CMakeLists.txt  vs-thumb_test.cpp
tests/vsthumb/: CMakeLists.txt
tests/whitespace/: CMakeLists.txt  check_whitespace.py
tools/: CMakeLists.txt  action.h  add-cover-art.py  cachetool.cpp  dbus_connection.cpp  dbus_connection.h  downloaderstest.cpp  get-album-art.py  get-thumbnail.py  get_local_thumbnail.cpp  get_local_thumbnail.h  get_remote_thumbnail.cpp  get_remote_thumbnail.h  get_thumbnail.cpp  get_thumbnail.h  imdump.cpp  lastfmtest.cpp  parse-settings.py  parse_size.cpp  parse_size.h  run-xvfb.sh  scaler.cpp  show_stats.cpp  show_stats.h  thumbnailer-admin.cpp  ubuntuservertest.cpp  util.cpp  util.h  videodump.cpp
(+109 files in other folders)
