# TODO: Re-enable  once ported.
#add_executable(imdump imdump.cpp)
#target_link_libraries(imdump thumbnailer ${GST_DEPS_LDFLAGS})

set(dbusinterface_xml "${CMAKE_SOURCE_DIR}/src/service/dbusinterface.xml")
set_source_files_properties(${dbusinterface_xml} PROPERTIES
    CLASSNAME ThumbnailerInterface)
qt5_add_dbus_interface(interface_files ${dbusinterface_xml} thumbnailerinterface)

set(admininterface_xml "${CMAKE_SOURCE_DIR}/src/service/admininterface.xml")
set_source_files_properties(${admininterface_xml} PROPERTIES
    CLASSNAME AdminInterface
    INCLUDE ${CMAKE_SOURCE_DIR}/src/service/stats.h)
qt5_add_dbus_interface(interface_files ${admininterface_xml} admininterface)

add_executable(thumbnailer-admin
    get_local_thumbnail.cpp
    get_remote_thumbnail.cpp
    dbus_connection.cpp
    parse_size.cpp
    show_stats.cpp
    thumbnailer-admin.cpp
    util.cpp
    ${CMAKE_SOURCE_DIR}/src/service/stats.cpp
    ${interface_files}
)
qt5_use_modules(thumbnailer-admin DBus)
target_link_libraries(thumbnailer-admin thumbnailer)

INSTALL(TARGETS thumbnailer-admin
        RUNTIME
        DESTINATION bin)

add_executable(downloaderstest downloaderstest.cpp)
target_link_libraries(downloaderstest thumbnailer)

qt5_use_modules(downloaderstest Core Network)
set_target_properties(downloaderstest PROPERTIES AUTOMOC TRUE)
